err/smalisca.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Flask-0.10.1.egg-info'...
Listing './lib/python3.5/site-packages/Flask_Restless-0.17.0.egg-info'...
Listing './lib/python3.5/site-packages/Flask_SQLAlchemy-2.3.2.dist-info'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/SQLAlchemy-1.2.0.egg-info'...
Listing './lib/python3.5/site-packages/Werkzeug-0.14.1.dist-info'...
Listing './lib/python3.5/site-packages/cement'...
Listing './lib/python3.5/site-packages/cement/core'...
Listing './lib/python3.5/site-packages/cement/ext'...
Listing './lib/python3.5/site-packages/cement/utils'...
Listing './lib/python3.5/site-packages/cement-2.10.2.egg-info'...
Listing './lib/python3.5/site-packages/dateutil'...
Listing './lib/python3.5/site-packages/dateutil/tz'...
Listing './lib/python3.5/site-packages/dateutil/zoneinfo'...
Listing './lib/python3.5/site-packages/examples'...
Listing './lib/python3.5/site-packages/flask'...
Listing './lib/python3.5/site-packages/flask/ext'...
Listing './lib/python3.5/site-packages/flask/testsuite'...
Listing './lib/python3.5/site-packages/flask/testsuite/static'...
Listing './lib/python3.5/site-packages/flask/testsuite/templates'...
Listing './lib/python3.5/site-packages/flask/testsuite/templates/nested'...
Listing './lib/python3.5/site-packages/flask/testsuite/test_apps'...
Listing './lib/python3.5/site-packages/flask/testsuite/test_apps/blueprintapp'...
Listing './lib/python3.5/site-packages/flask/testsuite/test_apps/blueprintapp/apps'...
Listing './lib/python3.5/site-packages/flask/testsuite/test_apps/blueprintapp/apps/admin'...
Listing './lib/python3.5/site-packages/flask/testsuite/test_apps/blueprintapp/apps/admin/static'...
Listing './lib/python3.5/site-packages/flask/testsuite/test_apps/blueprintapp/apps/admin/templates'...
Listing './lib/python3.5/site-packages/flask/testsuite/test_apps/blueprintapp/apps/frontend'...
Listing './lib/python3.5/site-packages/flask/testsuite/test_apps/blueprintapp/apps/frontend/templates'...
Listing './lib/python3.5/site-packages/flask/testsuite/test_apps/config_package_app'...
Listing './lib/python3.5/site-packages/flask/testsuite/test_apps/flask_broken'...
Listing './lib/python3.5/site-packages/flask/testsuite/test_apps/flask_newext_package'...
Listing './lib/python3.5/site-packages/flask/testsuite/test_apps/flaskext'...
Listing './lib/python3.5/site-packages/flask/testsuite/test_apps/flaskext/oldext_package'...
Listing './lib/python3.5/site-packages/flask/testsuite/test_apps/lib'...
Listing './lib/python3.5/site-packages/flask/testsuite/test_apps/lib/python2.5'...
Listing './lib/python3.5/site-packages/flask/testsuite/test_apps/lib/python2.5/site-packages'...
Listing './lib/python3.5/site-packages/flask/testsuite/test_apps/lib/python2.5/site-packages/site_package'...
Listing './lib/python3.5/site-packages/flask/testsuite/test_apps/moduleapp'...
Listing './lib/python3.5/site-packages/flask/testsuite/test_apps/moduleapp/apps'...
Listing './lib/python3.5/site-packages/flask/testsuite/test_apps/moduleapp/apps/admin'...
Listing './lib/python3.5/site-packages/flask/testsuite/test_apps/moduleapp/apps/admin/static'...
Listing './lib/python3.5/site-packages/flask/testsuite/test_apps/moduleapp/apps/admin/templates'...
Listing './lib/python3.5/site-packages/flask/testsuite/test_apps/moduleapp/apps/frontend'...
Listing './lib/python3.5/site-packages/flask/testsuite/test_apps/moduleapp/apps/frontend/templates'...
Listing './lib/python3.5/site-packages/flask/testsuite/test_apps/path'...
Listing './lib/python3.5/site-packages/flask/testsuite/test_apps/path/installed_package'...
Listing './lib/python3.5/site-packages/flask/testsuite/test_apps/subdomaintestmodule'...
Listing './lib/python3.5/site-packages/flask/testsuite/test_apps/subdomaintestmodule/static'...
Listing './lib/python3.5/site-packages/flask_restless'...
Listing './lib/python3.5/site-packages/flask_sqlalchemy'...
Listing './lib/python3.5/site-packages/graphviz'...
Listing './lib/python3.5/site-packages/graphviz-0.8.2.dist-info'...
Listing './lib/python3.5/site-packages/itsdangerous-0.24.egg-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/mimerender-0.6.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/prettytable-0.7.2.egg-info'...
Listing './lib/python3.5/site-packages/pyfiglet'...
Listing './lib/python3.5/site-packages/pyfiglet/fonts'...
Listing './lib/python3.5/site-packages/pyfiglet-0.7.5.egg-info'...
Listing './lib/python3.5/site-packages/python_dateutil-2.6.1.dist-info'...
Listing './lib/python3.5/site-packages/python_mimeparse-1.6.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/smalisca'...
Listing './lib/python3.5/site-packages/smalisca/analysis'...
Listing './lib/python3.5/site-packages/smalisca/controller'...
Listing './lib/python3.5/site-packages/smalisca/core'...
Listing './lib/python3.5/site-packages/smalisca/modules'...
Listing './lib/python3.5/site-packages/smalisca/modules/web'...
Listing './lib/python3.5/site-packages/smalisca-0.2.egg-info'...
Listing './lib/python3.5/site-packages/sqlalchemy'...
Listing './lib/python3.5/site-packages/sqlalchemy/connectors'...
Listing './lib/python3.5/site-packages/sqlalchemy/databases'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/firebird'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/mssql'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/mysql'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/oracle'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/postgresql'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/sqlite'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/sybase'...
Listing './lib/python3.5/site-packages/sqlalchemy/engine'...
Listing './lib/python3.5/site-packages/sqlalchemy/event'...
Listing './lib/python3.5/site-packages/sqlalchemy/ext'...
Listing './lib/python3.5/site-packages/sqlalchemy/ext/declarative'...
Listing './lib/python3.5/site-packages/sqlalchemy/orm'...
Listing './lib/python3.5/site-packages/sqlalchemy/sql'...
Listing './lib/python3.5/site-packages/sqlalchemy/testing'...
Listing './lib/python3.5/site-packages/sqlalchemy/testing/plugin'...
Listing './lib/python3.5/site-packages/sqlalchemy/testing/suite'...
Listing './lib/python3.5/site-packages/sqlalchemy/util'...
Listing './lib/python3.5/site-packages/werkzeug'...
Listing './lib/python3.5/site-packages/werkzeug/contrib'...
Listing './lib/python3.5/site-packages/werkzeug/debug'...
Listing './lib/python3.5/site-packages/werkzeug/debug/shared'...
Listing './share'...
Listing './share/python-wheels'...
